# mycroft-kirigami-application

./: CMakeLists.txt  CurrentWeatherType.qml  MainPage.qml  README.md  SkillDelegate.qml  SkillsView.qml  main.cpp  main.qml  mycroftinterface_dbus.cpp  mycroftinterface_dbus.h  mycroftkirigamiapp.pro  qml.qrc
src/: CMakeLists.txt  main.cpp  org.mycroft.kirigami.desktop.cmake  qml.qrc
src/android/: AndroidManifest.xml
src/icons/: CMakeLists.txt
src/images/: .directory
src/qml/: AskMessageType.qml  AutocompleteBox.qml  CustomIndicator.qml  CustomMicIndicator.qml  ImgRecogType.qml  InstallerDelegate.qml  InstallerView.qml  LoaderType.qml  MainPage.qml  SimpleMessageType.qml  SkillModel.qml  SkillsView.qml  WebViewType.qml  main.qml
